# cython-test

./: Justfile  MANIFEST.in  README.md  pyproject.toml  setup.py
src/hello/: __init__.py  _hello.pyi  _hello.pyx
tests/: test_hello.py
