[build-system]
requires = ["setuptools>=65", "wheel", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci-extension"
version = "0.1.0"
description = "Fast Fibonacci calculation using Cython"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
license = {text = "MIT"}
keywords = ["fibonacci", "cython", "performance"]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "cython>=0.29",
    "pytest>=8.3.5",
    "setuptools>=75.3.4",
    "wheel>=0.45.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
packages = ["fibonacci"]
package-dir = {"" = "src"}

# [tool.setuptools.ext-modules]
# fibonacci._fibonacci = {sources = ["src/fibonacci/_fibonacci.pyx"]}
